examples/valid/program59.c
int main(void) {
    const int x = 5;
    return x;
}

