examples/invalid/program26.c
int main(void) {
    int x;
    int x;
    x = 5;
    return x;
}

